# vramtop

./: .gitignore  CLAUDE.md  COMPLIANCE_REPORT.md  DESIGN_DOC.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile.gpu-workload  docker-compose.gpu.yml  gpu_workload.py
scripts/: train_test.py
src/vramtop/: __init__.py  __main__.py  cli.py  config.py  permissions.py  process_identity.py  sanitize.py  secrets.py
src/vramtop/analysis/: __init__.py  breakdown.py  oom_predictor.py  pelt_detector.py  phase_detector.py  segment_labels.py  survival.py  trends.py
src/vramtop/backends/: __init__.py  base.py  nvidia.py
src/vramtop/enrichment/: __init__.py  container.py  deep_mode.py  detector.py  model_files.py  mps.py  scraper.py
src/vramtop/export/: __init__.py  csv_logger.py  screenshot.py
src/vramtop/reporter/: __init__.py  protocol.py  pytorch.py
src/vramtop/ui/: __init__.py  app.py  styles.tcss
tests/: conftest.py  test_analysis_breakdown.py  test_config.py  test_deep_mode.py  test_enrichment_container.py  test_enrichment_detector.py  test_enrichment_model_files.py  test_enrichment_mps.py  test_export_csv.py  test_export_screenshot.py  test_kill_dialog.py  test_labels_realworld.py  test_memory_chart.py  test_multi_container.py  test_nvidia_backend.py  test_oom_predictor.py  test_pelt_detector.py  test_permissions.py  test_phase_detector.py  test_pid_namespace.py  test_process_identity.py  test_property_oom.py  test_property_phase.py  test_property_sanitize.py  test_reporter_pytorch.py  test_sanitize.py  test_scraper_security.py  test_scrapers_llamacpp.py  test_scrapers_ollama.py  test_scrapers_sglang.py  test_scrapers_vllm.py  test_security_boundaries.py  test_segment_labels.py  test_survival.py  test_tui.py
tests/fixtures/: nvml_responses.py
tests/integration/: test_cli_smoke.py  test_gpu_pytorch.py  test_multi_container.py
(+22 files in other folders)
