[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vramtop"
version = "0.1.0"
description = "The htop for GPU memory. Beautiful. Zero-friction. NVIDIA-first."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "vramtop contributors" },
]
keywords = ["gpu", "nvidia", "vram", "monitoring", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "nvidia-ml-py>=13.0",
    "textual>=1.0",
    "psutil>=5.9",
    "pydantic>=2.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
pelt = [
    "ruptures>=1.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "bandit>=1.7",
    "pip-audit>=2.0",
    "textual-dev>=1.0",
]

[project.scripts]
vramtop = "vramtop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vramtop"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/vramtop/ui/**" = ["A002"]  # Textual widgets use `id` as a standard parameter

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
packages = ["vramtop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires NVIDIA GPU (deselect with '-m not gpu')",
]
asyncio_mode = "auto"
